--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -227,5 +227,34 @@ section .last{
 }
 
 
+
+
+@media (max-width: 992px) {
+
+    
+}
+
+
+
+@media (max-width: 1366px) {
+
  
 
+}
+
+@media (max-width: 991px) {
+}
+
+
+@media (max-width: 768px) {
+
+}
+
+
+@media (max-height: 500px) {
+
+}
+
+@media (min-width: 1024px) {
+    
+}
